Make required changes

--- a/src/app/venter/complaint-card/complaint-card.component.html
+++ b/src/app/venter/complaint-card/complaint-card.component.html
@@ -1,5 +1,5 @@
-<div class="complaint-card" *ngFor="let complaint of complaintList; let i = index">
-  <mat-card class="card" [routerLink]="['/venter/detailed-complaint', complaint.id]">
+<div class="complaint-card">
+  <mat-card class="card" [routerLink]="['/venter/complaint', complaint.id]">
     <div class="status" [style.backgroundColor]="complaint.status_color">
       {{ complaint.status }}
     </div>
