--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -58,7 +58,7 @@
     <mat-icon>map</mat-icon> &nbsp; Map
 </a>
 
-<a [routerLink]="['/venter/complaints-home']" 
+<a [routerLink]="['/venter/complaints']" 
     routerLinkActive="active-link"
     mat-list-item>
     <mat-icon>announcement</mat-icon> &nbsp; Complaints/ Suggestions
