--- a/src/app/venter/edit-comment/edit-comment.component.html
+++ b/src/app/venter/edit-comment/edit-comment.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content>
   <p>Enter new Comment:</p>
-  <mat-form-field style="width:100%">
+  <mat-form-field class="comment-input-field">
     <input matInput [(ngModel)]="data.comment">
   </mat-form-field>
 </div>
