feat(card): Add placeholder while loading

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -16,6 +16,8 @@ table.card-table {
 .avatar img {
     height: 50px;
     width: 50px;
+    background: url('assets/lotus_placeholder.png') no-repeat;
+    background-size: contain;
 }
 
 div.content {
