feat(about): Add version code

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,4 +56,6 @@
     <a href="https://github.com/wncc/InstiApp" target="_blank">Android App</a><br>
     <a href="https://github.com/pulsejet/iitb-app-angular" target="_blank">Angular PWA</a><br><br>
   </div>
+
+  <div>InstiApp Angular v{{ VERSION }}</div>
 </div>
