fix(update-role): Change Inheritance section to Characteristics

--- a/src/app/update-role/update-role.component.html
+++ b/src/app/update-role/update-role.component.html
@@ -29,7 +29,7 @@
       </ng-container>
     </div>
 
-    <div>Inheritance<br>
+    <div>Characteristics<br>
       <button mat-button
               [class.hasred]="role.inheritable"
               (click)="toggleInheritable()">
