feat(update-role): Add hint to Add Person

--- a/src/app/update-role/update-role.component.css
+++ b/src/app/update-role/update-role.component.css
@@ -54,6 +54,10 @@
     width: 100%;
 }
 
+.add-person {
+    margin-bottom: 2px;
+}
+
 @media (max-width: 600px) {
     .permissions button {
         width: 45%;
