fix(body-details): Restore body follow button This was one weird fix

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -39,7 +39,7 @@
           </button>
           <br>
           <button mat-button
-                  class="follow-button"
+                  class="body-follow-button"
                   [class.following]="body.user_follows"
                  (click)="markFollow()"
                  [disabled]="!dataService.isLoggedIn()">
