--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -65,7 +65,7 @@
     padding: 0 20px;
 }
 
-.follow-button {
+.body-follow-button {
     float: right;
     line-height: 2em;
     transition: background-color 0.2s ease;
