--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -57,5 +57,5 @@
     <a href="https://github.com/pulsejet/iitb-app-angular" target="_blank">Angular PWA</a><br><br>
   </div>
 
-  <div>InstiApp Angular v{{ VERSION }}</div>
+  <div id="version">InstiApp Angular v{{ VERSION }}</div>
 </div>
