feat(role): Add button for official_post (fix #56)

--- a/src/app/comp/update-role/update-role.component.html
+++ b/src/app/comp/update-role/update-role.component.html
@@ -35,6 +35,12 @@
               (click)="toggleInheritable()">
         Inheritable
       </button>
+
+      <button mat-button
+              [class.hasred]="role.official_post"
+              (click)="toggleOfficialPost()">
+        Official Post
+      </button>
     </div>
   </div>
 
