--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -58,6 +58,12 @@
     <mat-icon>map</mat-icon> &nbsp; Map
 </a>
 
+<a [routerLink]="['/achievements']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>done_all</mat-icon> &nbsp; Achievements
+</a>
+
 <a [routerLink]="['/quick-links']"
    routerLinkActive="active-link"
    mat-list-item>
