--- a/src/app/page/achievements/achievements.component.html
+++ b/src/app/page/achievements/achievements.component.html
@@ -1,1 +1,29 @@
-Achievements
+<app-xunk-spinner *ngIf="!achievements" [error]="error"></app-xunk-spinner>
+
+<app-desktop-split
+  *ngIf="achievements"
+  [rightLeftBorder]="false"
+  [centerRightBorder]="true">
+
+    <div center>
+        <div *ngFor="let achievement of achievements">
+            <app-achievement-request [achievement]="achievement" (del)="delete(achievement)"></app-achievement-request>
+        </div>
+    </div>
+
+    <div right class="desktop-right">
+        <app-achievement-new *ngIf="!dataService.isMobile()"></app-achievement-new>
+    </div>
+
+</app-desktop-split>
+
+
+<div class="float-fixed-right-bottom">
+  <button mat-fab
+          class="mat-elevation-z2 edit-fab"
+          [class.gone]="dataService.isScrollingDown()"
+          *ngIf="dataService.isMobile()"
+          [routerLink]="['/achievement-new']">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
