--- a/src/app/page/achievements/achievements.component.html
+++ b/src/app/page/achievements/achievements.component.html
@@ -5,7 +5,19 @@
   [rightLeftBorder]="false"
   [centerRightBorder]="true">
 
-    <div center>
+    <div center class="achievements">
+        <div class="bodies" *ngIf="!bodyId && getVerifiableBodies().length > 0">
+            <div class="rl-header sm main-title">
+              Verify
+            </div>
+            <app-body-card *ngFor="let body of getVerifiableBodies()"
+                           [body]="body" [route]="['/achievements', body.id]">
+            </app-body-card>
+        </div>
+
+        <div class="rl-header sm main-title">
+            {{ this.bodyId ? 'Verify' : 'Your Achievements' }}
+        </div>
         <div *ngFor="let achievement of achievements">
             <app-achievement-request [achievement]="achievement" (del)="delete(achievement)"></app-achievement-request>
         </div>
