--- a/src/app/page/achievements/achievement-request/achievement-request.component.html
+++ b/src/app/page/achievements/achievement-request/achievement-request.component.html
@@ -6,6 +6,9 @@
   </mat-card-header>
   <mat-card-content>
     <p>Status: <span [style.color]="getStatus()[1]" class="status">{{ getStatus()[0] }}</span></p>
+    <button *ngIf="canVerify()" mat-raised-button color="primary" (click)="verify()">
+      {{ achievement.verified ? 'Unverify' : 'Verify' }}
+    </button>
     <button mat-button color="warn" (click)="delete()">Delete</button>
   </mat-card-content>
 </mat-card>
