--- a/src/app/page/achievements/achievement-request/achievement-request.component.html
+++ b/src/app/page/achievements/achievement-request/achievement-request.component.html
@@ -6,13 +6,20 @@
   </mat-card-header>
   <mat-card-content>
     <p>Status: <span [style.color]="getStatus()[1]" class="status">{{ getStatus()[0] }}</span></p>
-    <button *ngIf="canVerify()" mat-raised-button color="primary" (click)="dismiss(true)">
-      {{ achievement.verified ? 'Unverify' : 'Verify' }}
-    </button>
-    <button *ngIf="canVerify()" mat-raised-button color="accent" (click)="dismiss(false)"
-            [disabled]="achievement.dismissed">
-      Dismiss
-    </button>
-    <button mat-button color="warn" (click)="delete()">Delete</button>
+
+    <ng-container *ngIf="canVerify()">
+      <button mat-raised-button color="primary" (click)="dismiss(true)">
+        {{ achievement.verified ? 'Unverify' : 'Verify' }}
+      </button>
+
+      <button mat-raised-button color="accent" (click)="dismiss(false)"
+              [disabled]="achievement.dismissed">
+        Dismiss
+      </button>
+
+      <button mat-button color="warn" (click)="delete()">
+        Delete
+      </button>
+    </ng-container>
   </mat-card-content>
 </mat-card>
