feat(achieve): Create new page

--- a/src/app/comp/update-role/update-role.component.html
+++ b/src/app/comp/update-role/update-role.component.html
@@ -44,18 +44,7 @@
     </div>
   </div>
 
-  <mat-form-field class="full-width add-person">
-    <input #roll matInput #addBox
-            placeholder="Add Person"
-           [matAutocomplete]="auto"
-           [formControl]="addForm">
-
-    <mat-autocomplete name="personauto" #auto (optionSelected)="addPerson($event)">
-      <mat-option *ngFor="let person of explorePeople | async" [value]="person">{{ person.name }}</mat-option>
-    </mat-autocomplete>
-
-    <mat-hint align="start">Enter a name or roll number</mat-hint>
-  </mat-form-field>
+  <app-search-box (change)="addPerson($event)"></app-search-box>
 
   <table class="user-table">
     <tr *ngFor="let user of role.users_detail">
