feat(achieve): Make additions for event-driven model

--- a/src/app/card/achievement-card/achievement-card.component.html
+++ b/src/app/card/achievement-card/achievement-card.component.html
@@ -3,8 +3,8 @@
      mat-ripple
      [routerLink]="route">
 
-  <app-card [avatar]="dataService.getResized(achievement.body_detail.image_url, 150)"
+  <app-card [avatar]="avatar"
             [title]="achievement.title"
-            [subtitle]="achievement.body_detail.name">
+            [subtitle]="subtitle">
   </app-card>
 </div>
