--- a/src/app/page/achievements/achievement-request/achievement-request.component.html
+++ b/src/app/page/achievements/achievement-request/achievement-request.component.html
@@ -5,8 +5,11 @@
     <mat-card-subtitle> {{ getSubtitle() }} </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+    <p *ngIf="user && achievement.event_detail">For: <b>{{ achievement.event_detail.name }}</b></p>
+
     <p *ngIf="achievement.description">{{ achievement.description }}</p>
     <p *ngIf="achievement.admin_note">Admin note: {{ achievement.admin_note }}</p>
+
     <p>Status: <span [style.color]="getStatus()[1]" class="status">{{ getStatus()[0] }}</span></p>
 
     <ng-container *ngIf="user && canVerify()">
@@ -25,3 +28,4 @@
     </ng-container>
   </mat-card-content>
 </mat-card>
+<hr/>
