--- a/src/app/page/achievements/achievement-new/achievement-new.component.html
+++ b/src/app/page/achievements/achievement-new/achievement-new.component.html
@@ -5,9 +5,9 @@
 
     <div class="full-width-details field">
         <mat-form-field class="full-width">
-        <input matInput placeholder="Title" #title
-                    [(ngModel)]="achievement.title">
-        <mat-hint align="end">{{ title.value.length }} / 50</mat-hint>
+            <input matInput placeholder="Title" #title
+                        [(ngModel)]="achievement.title" required>
+            <mat-hint align="end">{{ title.value.length }} / 50</mat-hint>
         </mat-form-field>
 
         <mat-form-field class="full-width">
