feat(achieve): Show on event page, allow request

--- a/src/app/page/event-details/event-details.component.css
+++ b/src/app/page/event-details/event-details.component.css
@@ -106,6 +106,15 @@ span.badge {
     transform: scale(0.001) translateZ(0);
 }
 
+.achievements {
+    padding: 10px;
+    max-width: calc(94% - 20px);
+}
+
+.offer-card {
+    cursor: pointer;
+}
+
 @media (min-width: 768px) {
     .follow-div {
         margin-top: -1em;
