--- a/src/app/page/achievements/achievement-new/achievement-new.component.html
+++ b/src/app/page/achievements/achievement-new/achievement-new.component.html
@@ -5,13 +5,13 @@
 
     <div class="full-width-details field">
         <mat-form-field class="full-width">
-            <input matInput placeholder="Title" #title
+            <input matInput placeholder="Title" #title [disabled]="offerId"
                         [(ngModel)]="achievement.title" required>
             <mat-hint align="end">{{ title.value.length }} / 50</mat-hint>
         </mat-form-field>
 
         <mat-form-field class="full-width">
-            <textarea matInput placeholder="Description"
+            <textarea matInput placeholder="Description" [disabled]="offerId"
                     [(ngModel)]="achievement.description" rows=4>
             </textarea>
         </mat-form-field>
@@ -25,7 +25,8 @@
         <app-search-box exploreProp="events"
                         placeholder="Event (optional)"
                         hint="Search for an InstiApp event"
-                        (change)="setEvent($event)">
+                        (change)="setEvent($event)"
+                        *ngIf="!offerId">
         </app-search-box>
 
         <app-event-card *ngIf="achievement.event_detail"
@@ -36,7 +37,8 @@
         <app-search-box exploreProp="bodies"
                         placeholder="Verifying Authority"
                         hint="Enter an organisation's name"
-                        (change)="setBody($event)">
+                        (change)="setBody($event)"
+                        *ngIf="!offerId">
         </app-search-box>
 
         <app-body-card *ngIf="achievement.body_detail"
