--- a/src/app/page/achievements/achievement-new/achievement-new.component.html
+++ b/src/app/page/achievements/achievement-new/achievement-new.component.html
@@ -1,4 +1,6 @@
-<div class="main" *ngIf="showQR === 0">
+<app-xunk-spinner *ngIf="!achievement || showQR === -1"></app-xunk-spinner>
+
+<div class="main" *ngIf="showQR === 0 && achievement">
     <div *ngIf="secret">
         <div class="rl-header sm full-width-details main-title">
             Claim QR
@@ -79,4 +81,21 @@
 
 <div class="main" *ngIf="showQR === 2">
     <img [src]="secretQR" class="qr" />
+</div>
+
+<div class="anim" *ngIf="showQR === 3">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+        <circle class="path circle" fill="none" stroke="#73AF55" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+        <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="100.2,40.2 51.5,88.8 29.8,67.5 "/>
+    </svg>
+    <p class="success">{{ resultMessage }}</p>
+</div>
+
+<div class="anim" *ngIf="showQR === 4">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+        <circle class="path circle" fill="none" stroke="#D06079" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+        <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="34.4" y1="37.9" x2="95.8" y2="92.3"/>
+        <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="95.8" y1="38" x2="34.4" y2="92.2"/>
+    </svg>
+    <p class="error">That didn't work :(</p>
 </div>
