--- a/src/app/page/event-details/event-details.component.html
+++ b/src/app/page/event-details/event-details.component.html
@@ -123,7 +123,7 @@
 
 <ng-template #achievements>
   <div class="section" *ngIf="event.offered_achievements && event.offered_achievements.length > 0">
-    <div class="rl-header sm">Achievements</div>
+    <div class="rl-header sm" *ngIf="!desktopMode">Achievements</div>
     <div class="achievements">
       <div mat-ripple *ngFor="let oa of event.offered_achievements"
           [routerLink]="['/achievement-new', oa.id]" class="offer-card">
