fix(event): Fix styles of achievements

--- a/src/app/page/event-details/event-details.component.css
+++ b/src/app/page/event-details/event-details.component.css
@@ -111,6 +111,11 @@ span.badge {
     max-width: calc(94% - 20px);
 }
 
+.achievement {
+    cursor: pointer;
+    outline: none;
+}
+
 .offer-card {
     cursor: pointer;
 }
